--- a/test/runtime-test.jade
+++ b/test/runtime-test.jade
@@ -4,13 +4,21 @@ html
     title Test
     meta(charset='utf-8')
     meta(http-equiv='Content-Type', content='text/html; charset=UTF-8')
+    script(src='injectcss.js')
     script(src='jspm_packages/system.js')
     script(src='config.js')
     script(type='text/javascript').
       System.import('styles/test.scss!')
-        .then(() => System.import('styles/test_sass.sass!scss'))
-        .then(() => System.import('styles/test_other.scss!'))
-        .then(() => {
+        .then(function(css){
+          injectCSS(css);
+          return System.import('styles/test_sass.sass!scss');
+        })
+        .then(function(css){
+            injectCSS(css);
+            return System.import('styles/test_other.scss!');
+        })
+        .then(function(css){
+          injectCSS(css);
           document.body.innerHTML += '<h2>Loading done</h2>';
         });
   body
